--- a/index.html
+++ b/index.html
@@ -1,147 +1,161 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="assets/img/iconp.ico" type="image/x-icon"/>
-    <title>Greyphoni</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-    <script src="assets/js/jquery-3.3.1.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/script.js"></script>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <title>Greyphoni</title>
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="bootstrapcdnassets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="assets/js/jquery-3.3.1.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
+  <script src="assets/js/phone.json"></script>
+
+
+  <link rel="shortcut icon" href="assets/img/iconp.ico" type="image/x-icon"/>
+  <title>Greyphoni</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+  <script src="assets/js/jquery-3.3.1.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/script.js"></script>
+
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+
+<body ng-app="myApp" ng-controller="myCtrl">
   <!-- Start nav bar -->
   <nav class="navbar navbar-expand-lg fixed-top" id="navbarAll" >
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="navbarBurgrBtn">
-        <span class="navbar-toggler-icon"> ☰ </span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="navbarBurgrBtn">
+      <span class="navbar-toggler-icon"> ☰ </span>
 
-      </button>
-      <a class="navbar-brand" href="#" id="navbarLogo">Greyphoni</a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#" id="navbarLink">Samsung</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" id="navbarLink">Apple</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" id="navbarLink">Huawei</a>
-          </li>
-        </ul>
+    </button>
+    <a class="navbar-brand" href="#" ng-click="changeMarque('')" id="navbarLogo">Greyphoni</a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#" ng-click="changeMarque('Samsung')" id="navbarLink">Samsung</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"  ng-click="changeMarque('Apple')" id="navbarLink">Apple</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" ng-click="changeMarque('Huawei')" id="navbarLink">Huawei</a>
+        </li>
+      </ul>
+    </div>
+    <!--<form class="form-inline">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="navbarSearchBtn">Search</button>
+  </form>
+-->
+<a type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#navbarModal" id="navbarModalBtn">Panier</a>
+</nav>
+<!-- End nav bar -->
+
+<!-- Start modal -->
+<div class="modal" role="dialog" id="navbarModal">
+  <div class="modal-dialog">
+    <!-- Start modal content -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title">Mon panier</h1>
+        <button type="button" class="close" data-dismiss="modal">X</button>
       </div>
-      <!--<form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="navbarSearchBtn">Search</button>
-      </form>
-      -->
-      <a type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#navbarModal" id="navbarModalBtn">Panier</a>
-    </nav>
-  <!-- End nav bar -->
-
-  <!-- Start modal -->
-  <div class="modal" role="dialog" id="navbarModal">
-    <div class="modal-dialog">
-      <!-- Start modal content -->
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title">Mon panier</h1>
-          <button type="button" class="close" data-dismiss="modal">X</button>
-        </div>
-        <div class="modal-body">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="row">
-                <div class="col-lg-2">
-                  <img src="{{immage}}" class="img-thumbnail" />
-                </div>
-                <div class="col-lg-2">
-                  <input class="number"></input>
-                </div>
-                <div class="col-lg-2">
-                  <div class="row">
-                    <div class="col-lg-12">
-                      <button class="increase">+</button>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-lg-12">
-                      <button class="decrease">-</button>
-                    </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="row">
+              <div class="col-lg-2">
+                <img src="{{immage}}" class="img-thumbnail" />
+              </div>
+              <div class="col-lg-2">
+                <input class="number"/>
+              </div>
+              <div class="col-lg-2">
+                <div class="row">
+                  <div class="col-lg-12">
+                    <button class="increase">+</button>
                   </div>
                 </div>
-                <div class="col-lg-2">
-                  <span class="price">Prix : </span>
+                <div class="row">
+                  <div class="col-lg-12">
+                    <button class="decrease">-</button>
+                  </div>
                 </div>
-                <div class="col-lg-2">
-                  {{prix}}
-                </div>
-                <div class="col-lg-2">
-                  <button class="trash"><i class="fa fa-trash-o"></i></button>
-                </div>
+              </div>
+              <div class="col-lg-2">
+                <span class="price">Prix : </span>
+              </div>
+              <div class="col-lg-2">
+                {{prix}}
+              </div>
+              <div class="col-lg-2">
+                <button class="trash"><i class="fa fa-trash-o"></i></button>
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-lg-6">
-              <span class="total">Total : </span>
-            </div>
-            <div class="col-lg-6">
-              <span>{{total}}</span>
-            </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <span class="total">Total : </span>
+          </div>
+          <div class="col-lg-6">
+            <span>{{total}}</span>
           </div>
         </div>
-
-        <!-- End modal content -->
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Oui</button>
-        </div>
       </div>
+
       <!-- End modal content -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Oui</button>
+      </div>
+    </div>
+    <!-- End modal content -->
+  </div>
+</div>
+<!-- End modal-->
+
+<!-- Start container full page -->
+<div class="container-fluid">
+
+  <!-- Start jumbotron -->
+  <div class="container">
+    <div class="jumbotron">
+      <h1>Bienvenue sur Greyphoni</h1>
+      <p>0000000000000000000000000</p>
     </div>
   </div>
-  <!-- End modal-->
+  <!-- End jumbotron -->
 
-  <!-- Start container full page -->
+  <!-- Start card article -->
+  <div class="">
   <div class="container-fluid">
-
-    <!-- Start jumbotron -->
-    <div class="container">
-      <div class="jumbotron">
-        <h1>Bienvenue sur Greyphoni</h1>
-        <p>0000000000000000000000000</p>
-      </div>
-    </div>
-    <!-- End jumbotron -->
-
-    <!-- Start card article -->
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-12">
-          <!-- accés au json -->
-          <div ng-app="myApp" ng-controller="myCtrl">
-            <div class="card" style="width:18rem;" ng-repeat="table in myTable">
-              <img class="card-img-top" src={{table.image}}>
-              <div class="card-body">
-                <div class="card-title">{{table.marque}}</div>
-                <div class="card-title">{{table.modele}}</div>
-                <td>{{table.prix}}</td>
-                <p class="card-text">{{table.description}}</p>
-                <a href="#" class="btn btn-primary">Panier</a>
+    <div class="row">
+      <div class="col-lg-12">
+        <!-- accés au json -->
+        <div>
+          <div class="card" style="width:18rem;" ng-repeat="phone in phones | orderBy : orderby | filter : {marque:filterChange}  track by $index">
+            <img class="card-img-top" src={{phone.image}}>
+            <div class="card-body">
+              <div class="card-title">{{phone.marque}}</div>
+              <div class="card-title">{{phone.modele}}</div>
+              <div>{{phone.prix}}</div>
+              <p class="card-text">{{phone.description}}</p>
+              <a href="#" class="btn btn-primary">Panier</a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- End card article -->
-
-    <!-- Start footer -->
+  </div>
+  <!-- Start footer -->
     <footer>
       <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-4">
@@ -181,17 +195,20 @@
     </footer>
     <!-- End footer -->
 
+<!-- End card article -->
 
-    <script>
-      var app = angular.module('myApp', []);
-      app.controller('myCtrl', function($scope, $http) {
-        $http.get("assets/js/phone.json").then(function (response)
-        {$scope.myTable = response.data});
-      });
-    </script>
+<script>
+/*var app = angular.module('myApp', []);
+app.controller('myCtrl', function($scope, $http) {
+  $http.get("assets/js/phone.json").then(function (response)
+  {$scope.myTable = response.data});
+});
+$scope.changeMarque = function(marque) {
+    $scope.filterChange = marque;
+  };*/
+</script>
+</div>
+<!-- End container full page -->
 
-  </div>
-  <!-- End container full page -->
-
-  </body>
+</body>
 </html>
