--- a/index.html
+++ b/index.html
@@ -15,175 +15,165 @@
   <script src="assets/js/script.js"></script>
 </head>
 <body ng-app="myApp">
-      <!-- Start nav bar -->
-      <nav class="navbar navbar-expand-lg fixed-top" id="navbarAll" >
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="navbarBurgrBtn">
-          <span class="navbar-toggler-icon"> ☰ </span>
+  <!-- Start nav bar -->
+  <nav class="navbar navbar-expand-lg fixed-top" id="navbarAll" >
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="navbarBurgrBtn">
+      <span class="navbar-toggler-icon"> ☰ </span>
 
-        </button>
-        <a class="navbar-brand" href="#" id="navbarLogo">Greyphoni</a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#" id="navbarLink">Samsung</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" id="navbarLink">Apple</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" id="navbarLink">Huawei</a>
-            </li>
-          </ul>
+    </button>
+    <a class="navbar-brand" href="#" id="navbarLogo">Greyphoni</a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="navbarLink">Samsung</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="navbarLink">Apple</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="navbarLink">Huawei</a>
+        </li>
+      </ul>
+    </div>
+    <!--<form class="form-inline">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="navbarSearchBtn">Search</button>
+  </form>
+-->
+<a type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#navbarModal" id="navbarModalBtn"><i class="fa fa-shopping-cart"><span class="badge">{{store.totalItems}}</span></a>
+</nav>
+<!-- End nav bar -->
+
+<!-- Start modal -->
+<div ng-controller="storeCtrl">
+  <div name="cart" class="modal" role="dialog" id="navbarModal">
+    <div class="modal-dialog modal-lg">
+      <!-- Start modal content -->
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title">Mon panier</h1>
+          <button type="button" class="close" data-dismiss="modal">X</button>
         </div>
-        <!--<form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="navbarSearchBtn">Search</button>
-      </form>
-    -->
-    <a type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#navbarModal" id="navbarModalBtn"><i class="fa fa-shopping-cart"><span class="badge">{{store.totalItems}}</span></a>
-  </nav>
-  <!-- End nav bar -->
-
-  <!-- Start modal -->
-  <div class="storeCtrl">
-    <div name="cart" class="modal" role="dialog" id="navbarModal">
-      <div class="modal-dialog modal-lg">
-        <!-- Start modal content -->
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title">Mon panier</h1>
-            <button type="button" class="close" data-dismiss="modal">X</button>
-          </div>
-          <div class="modal-body">
-            <div class="row">
-              <div class="col-lg-12">
-                <div class="row">
-                  <div class="col-lg-2">
-                    <img src="{{table.immage}}" class="img-thumbnail" />
-                  </div>
-                  <div class="col-lg-2">
-                    <input class="number"></input>
-                  </div>
-                  <div class="col-lg-2">
-                    <div class="row">
-                      <div class="col-lg-12">
-                        <button class="increase">+</button>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-lg-12">
-                        <button class="decrease">-</button>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-2">
-                    <span class="price">Prix : </span>
-                  </div>
-                  <div class="col-lg-2">
-                    {{prix}}
-                  </div>
-                  <div class="col-lg-2">
-                    <button class="trash"><i class="fa fa-trash-o"></i></button>
-                  </div>
+        <div class="modal-body">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="row" ng-repeat="(id, element) in prix">
+                <div class="col-lg-2">
+                  <img src="{{image[id]}}" class="img-thumbnail" />
+                </div>
+                <div class="col-lg-2">  <span class="name">{{modele[id]}}  </span>
+                </div>
+                <div class="col-lg-2">
+                  <input  type="number" ng-model="article.quantity" min="0" max="99" required></input>
+                </div>
+                <div class="col-lg-2">
+                  <span class="price">Prix : </span>
+                </div>
+                <div class="col-lg-2">
+                  {{prix[id]}}
+                </div>
+                <div class="col-lg-2">
+                  <button class="trash"><i class="fa fa-trash-o"></i></button>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-6">
+                  <span class="total">Total : </span>
+                </div>
+                <div class="col-lg-6">
+                  <span>{{total}}</span>
                 </div>
               </div>
             </div>
-            <div class="row">
-              <div class="col-lg-6">
-                <span class="total">Total : </span>
-              </div>
-              <div class="col-lg-6">
-                <span>{{total}}</span>
-              </div>
-            </div>
-          </div>
-
-          <!-- End modal content -->
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Valider</button>
           </div>
         </div>
         <!-- End modal content -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Valider</button>
+        </div>
       </div>
+      <!-- End modal content -->
     </div>
   </div>
-  <!-- End modal-->
+</div>
+<!-- End modal-->
 
-  <!-- Start container full page -->
-  <div class="container-fluid">
+<!-- Start container full page -->
+<div class="container-fluid">
 
-    <!-- Start jumbotron -->
-    <div class="container">
-      <div class="jumbotron">
-        <h1>Bienvenue sur Greyphoni</h1>
-        <p>0000000000000000000000000</p>
-      </div>
+  <!-- Start jumbotron -->
+  <div class="container">
+    <div class="jumbotron">
+      <h1>Bienvenue sur Greyphoni</h1>
+      <p>0000000000000000000000000</p>
     </div>
-    <!-- End jumbotron -->
+  </div>
+  <!-- End jumbotron -->
 
-    <!-- Start card article -->
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-12">
-          <!-- accés au json -->
-          <div ng-controller="cardCtrl">
-            <div class="card" style="width:18rem;" ng-repeat="table in myTable">
-              <img name="image" ng-model="image" class="image card-img-top" src={{table.image}}>
-              <div class="card-body">
-                <div name="marque" ng-model="marque" class="card-title">{{table.marque}}</div>
-                <div name="model" ng-model="modele" class="card-title">{{table.modele}}</div>
-                <td name="prix">{{table.prix}}</td>
-                <p ng-model="description" name="description" class="card-text">{{table.description}}</p>
-                <button type="button" class="btn btn-primary" ng-click="store.addItems()">Ajouter au panier</a>
+  <!-- Start card article -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12">
+        <!-- accés au json -->
+        <div ng-controller="cardCtrl">
+          <div class="card" style="width:18rem;" ng-repeat="table in myTable">
+            <img name="image" ng-model="image" class="image card-img-top" src={{table.image}}>
+            <div class="card-body">
+              <div name="marque" ng-model="marque" class="card-title">{{table.marque}}</div>
+              <div name="model" ng-model="modele" class="card-title">{{table.modele}}</div>
+              <td name="prix">{{table.prix}}</td>
+              <p ng-model="description" name="description" class="card-text">{{table.description}}</p>
+              <button type="button" class="btn btn-primary" ng-click="storeItems(table)">Ajouter au panier</a>
+              
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <!-- Start footer -->
+      <footer>
+        <div class="row">
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <h3>Produits</h3>
+            <ul>
+              <li><a href="https://www.apple.com/fr/">apple</a></li>
+              <li><a href="https://consumer.huawei.com/fr/">huawei</a></li>
+              <li><a href="https://www.samsung.com/fr/">samsung</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <h3>Nous contacter</h3>
+            <ul>
+              <li><i class="fas fa-building"></i> les amelots,18260 ASSIGNY</li>
+              <li><i class="fas fa-phone"></i> 02-48-73-83-09</li>
+              <li><i class="fas fa-envelope"></i> Greyphoni@gmail.com</li>
+            </ul>
+          </div>
+          <ul>
+            <div class="col-sm-12 col-md-6 col-lg-2">
+              <li>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-snapchat-ghost"></i>
+              </li>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-2">
+              <li>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-twitter"></i>
+              </li>
+            </div>
+          </ul>
+        </div>
+        <div class="footer-copyright text-center py-3">© 1522 Copyright:
+          <a href="#"> Greyphoni</a>
+        </div>
+      </footer>
+      <!-- End footer -->
+
+      <!-- End card article -->
     </div>
-    <!-- Start footer -->
-    <footer>
-      <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-4">
-          <h3>Produits</h3>
-          <ul>
-            <li><a href="https://www.apple.com/fr/">apple</a></li>
-            <li><a href="https://consumer.huawei.com/fr/">huawei</a></li>
-            <li><a href="https://www.samsung.com/fr/">samsung</a></li>
-          </ul>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
-          <h3>Nous contacter</h3>
-          <ul>
-            <li><i class="fas fa-building"></i> les amelots,18260 ASSIGNY</li>
-            <li><i class="fas fa-phone"></i> 02-48-73-83-09</li>
-            <li><i class="fas fa-envelope"></i> Greyphoni@gmail.com</li>
-          </ul>
-        </div>
-        <ul>
-          <div class="col-sm-12 col-md-6 col-lg-2">
-            <li>
-              <i class="fab fa-facebook-f"></i>
-              <i class="fab fa-snapchat-ghost"></i>
-            </li>
-          </div>
-          <div class="col-sm-12 col-md-6 col-lg-2">
-            <li>
-              <i class="fab fa-instagram"></i>
-              <i class="fab fa-twitter"></i>
-            </li>
-          </div>
-        </ul>
-      </div>
-      <div class="footer-copyright text-center py-3">© 1522 Copyright:
-        <a href="#"> Greyphoni</a>
-      </div>
-    </footer>
-    <!-- End footer -->
+    <!-- End container full page -->
 
-    <!-- End card article -->
-</div>
-<!-- End container full page -->
-
-</body>
-</html>
+  </body>
+  </html>
